# DZ_6_WEB

./: README.md  bd_constants.py  dz_6.sqlite  dz_6_sqlite.bd  main.py  pyproject.toml  table.py
query/: query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
